--- a/src/app/BasicForm/basic-form.component.html
+++ b/src/app/BasicForm/basic-form.component.html
@@ -1,10 +1,14 @@
 <div class="container">
 
-    <form #form="ngForm">
+    <form #form="ngForm" (ngSubmit)="onSubmit(form)">
         <div class="form-group">
             <label for="name">Your name</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Enter name"
-                [(ngModel)]="basicFromModuleVM.name">
+                [(ngModel)]="basicFromModuleVM.name"
+                required #nameField="ngModel"
+                (click)="onClick()">
+            <div class="alert alert-danger" [hidden]="nameField.valid || nameField.untouched">Enter name</div>
+            <div class="alert alert-info" [hidden]="show">Enter name</div>
         </div>
         <h5>Email Offfers</h5>
         <div class="form-check form-group">
@@ -45,9 +49,11 @@
         </div>
         <div class="form-group">
             <label for="Notes">Notes</label>
-            <textarea id="notes" name="notes" class="form-control" rows="3" [(ngModel)]="basicFromModuleVM.info">
-
+            <textarea id="notes" name="notes" class="form-control" rows="3" [(ngModel)]="basicFromModuleVM.info"
+            #infoField = 'ngModel'
+            required [class.errors]="form.submitted && infoField.invalid">
             </textarea>
+            <div class="alert alert-danger" [hidden]="!form.submitted || infoField.valid">Enter info</div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
